Add SonarQube plugin to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
                     <linkXRef>false</linkXRef>
                 </configuration>
             </plugin>
+            
+            <!-- SonarQube Plugin for code quality analysis -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
